# algorithm-learn

./: CMakeLists.txt  README.md  main.cpp
1.10/: 1.10.1.cpp  1.10.2.cpp  1.10.3.cpp  1.10.4.cpp
1.15/: 1.15.1.cpp  1.15.2.cpp  1.15.3.cpp
1.18/: 1.18.1.cpp  1.18.2.cpp  1.18.3.cpp  1.18.4.cpp  1.18.5.cpp  1.18.6.cpp
1.19/: 1.19.1.cpp  1.19.2.cpp  1.19.3.cpp
1.20/: 1.20.1.cpp  1.20.2.cpp  1.20.3.cpp  1.20.4.cpp  1.20.5.cpp
1.21/: 1.21.1.cpp  1.21.2.cpp  1.21.3.cpp  1.21.4.cpp  1.21.5.cpp  1.21.6.cpp
1.22/: 1.22.1.cpp
1.30/: 1.30.1.cpp  1.30.2.cpp  1.30.3.cpp
1.31/: 1.31.1.cpp  1.31.2.cpp
1.6/: 1.6.1.cpp  1.6.2.cpp  1.6.3.cpp
1.7/: 1.7.1.cpp  1.7.2.cpp  1.7.3.cpp  1.7.4.cpp
1.8/: 1.8.1.cpp  1.8.2.cpp  1.8.3.cpp
1.9/: 1.9.1.cpp  1.9.2.cpp  1.9.3.cpp  1.9.4.cpp  1.9.5.cpp  1.9.6.cpp  1.9.7.cpp
12.10/: 12.10.1.cpp
12.11/: 12.11.1.cpp  12.11.2.cpp  12.11.3.cpp  12.11.4.cpp
12.13/: 12.13.1.cpp  12.13.2.cpp
12.14/: 12.14.1.cpp  12.14.2.cpp
12.15/: 12.15.1.cpp
12.17/: 12.17.1.cpp  12.17.2.cpp  12.17.3.cpp  12.17.4.cpp  12.17.5.cpp
12.19/: 12.19.1.cpp  12.19.2.cpp
12.20/: 12.20.1.cpp
12.21/: 12.21.1.cpp  12.21.2.cpp  12.21.3.cpp  12.21.4.cpp
12.25/: 12.25.1.cpp
12.27/: 12.27.1.cpp  12.27.2.cpp  12.27.3.cpp  12.27.4.cpp  12.27.5.cpp
12.3/: 12.3.1.cpp  12.3.10.cpp  12.3.11.cpp  12.3.2.cpp  12.3.3.cpp  12.3.4.cpp  12.3.5.cpp  12.3.6.cpp  12.3.7.cpp  12.3.8.cpp  12.3.9.cpp
12.4/: 12.4.1.cpp  12.4.2.cpp  12.4.3.cpp  12.4.4.cpp
12.5/: 12.5.1.cpp  12.5.2.cpp
12.6/: 12.6.1.cpp  12.6.2.cpp  12.6.3.cpp
12.7/: 12.7.1.cpp  12.7.2.cpp  12.7.3.cpp  12.7.4.cpp
12.9/: 12.9.1.cpp
2.2/: 2.2.1.cpp  2.2.2.cpp  2.2.3.cpp  2.2.4.cpp  2.2.5.cpp
2.4/: 2.4.1.cpp  2.4.10.cpp  2.4.2.cpp  2.4.3.cpp  2.4.4.cpp  2.4.5.cpp  2.4.6.cpp  2.4.7.cpp  2.4.8.cpp  2.4.9.cpp
3.10/: 3.10.1.cpp  3.10.10.cpp  3.10.11.cpp  3.10.2.cpp  3.10.3.cpp  3.10.4.cpp  3.10.5.cpp  3.10.6.cpp  3.10.7.cpp  3.10.8.cpp  3.10.9.cpp
3.11/: 3.11.1.cpp  3.11.2.cpp  3.11.3.cpp  3.11.4.cpp  3.11.5.cpp  3.11.6.cpp  3.11.7.cpp  3.11.8.cpp  3.11.9.cpp
3.12/: 3.12.1.cpp  3.12.2.cpp  3.12.3.cpp  3.12.4.cpp  3.12.5.cpp
3.13/: 3.13.1.cpp  3.13.2.cpp  3.13.3.cpp  3.13.4.cpp
3.14/: 3.14.1.cpp  3.14.2.cpp
3.15/: 3.15.1.cpp  3.15.2.cpp  3.15.3.cpp  3.15.4.cpp
3.2/: 3.2.1.cpp  graph.txt
3.20/: 3.20.1.cpp  3.20.2.cpp  3.20.3.cpp
3.4/: 3.4.1.cpp  3.4.2.cpp  3.4.3.cpp  3.4.4.cpp
3.5/: 3.5.1.cpp  3.5.10.cpp  3.5.2.cpp  3.5.3.cpp  3.5.4.cpp  3.5.5.cpp  3.5.6.cpp  3.5.7.cpp  3.5.8.cpp  3.5.9.cpp
3.6/: 3.6.1.cpp  3.6.2.cpp  3.6.3.cpp  3.6.4.cpp  3.6.5.cpp
3.7/: gfa_loader.cpp  gsam.cpp
3.8/: 3.8.1.cpp  3.8.2.cpp  3.8.3.cpp  3.8.4.cpp  3.8.5.cpp  3.8.6.cpp  3.8.7.cpp
3.9/: 3.9.1.cpp  3.9.2.cpp  3.9.3.cpp  3.9.4.cpp
4.8/: 4.8.1.cpp  4.8.2.cpp
DAWG/: directed_acyclic_word_graph.cpp
create_data/: create_data.cpp  split_data.cpp  test.cpp
suffix_auto_machine/: count_string.cpp  fifth_edition.cpp  fifth_edition_fprintf_optimal.cpp  fourth_edition.cpp  global_count_string.cpp  second_edition.cpp  third_edition.cpp
suffix_balanced_tree/: solve.cpp
